
* Bug Fixes and Enhancements *
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)


PostGIS 3.2.6
2023/11/19

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes and Enhancements *

  - #5568, Improve robustness of topology face split handling (Sandro Santilli)
  - #5548, Fix box-filtered validity check of topologies with edge-less faces
           (Sandro Santilli)
  - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
           (Sandro Santilli)
  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5403, [postgis_topology] Fix ValidateTopology(bbox)
           without topology in search_path (Sandro Santilli)
  - #5410, [postgis_raster] ST_Value bilinear resample,
           don't throw an error if Band has no NODATA value
           (Regina Obe)
  - #5385, Postgres malloc assertion fail when
           using pg_cancel_backend with ST_AsMVT
           (Regina Obe, Paul Ramsey)
 - Fix JsonB casting issue (Paul Ramsey)
 - #5616, Fix to find docbook on newer docbook installs (Regina Obe)


* Breaking Changes *

    - #5385, Take out interruptability of ST_AsMVT
             as it causes backend crash under intense conditions
            (Regina Obe, Paul Ramsey)


PostGIS 3.2.5
2023/05/29

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes *