@@ -13,6 +13,7 @@ Proj 6.1+, and PostgreSQL 14+.
  - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
  - #5604, Handle distance between collections with empty elements (Paul Ramsey)
  - #5635, Handle NaN points in ST_Split (Regina Obe)
+ - Logic error in ST_Covers(geography) (Paul Ramsey)
 
 
 PostGIS 3.2.6
